# syncflow

./: .editorconfig  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/: __init__.py
apps/activity/: __init__.py  apps.py  models.py
apps/activity/migrations/: 0001_initial.py  0002_initial.py
apps/core/: __init__.py  apps.py  urls.py  views.py
apps/organizations/: __init__.py  apps.py  models.py  schema.py  serializers.py  urls.py  views.py
apps/organizations/migrations/: 0001_initial.py  0002_initial.py
apps/projects/: __init__.py  apps.py  models.py  schema.py  serializers.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_initial.py
apps/tasks/: __init__.py  apps.py  models.py  routing.py  schema.py  serializers.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_initial.py
apps/users/: __init__.py  apps.py  models.py  schema.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
syncflow/: __init__.py  asgi.py  celery.py  graphql_urls.py  urls.py  wsgi.py
syncflow/llm/: __init__.py  __main__.py  cli.py  models.py  pricing.py  pricing.toml
syncflow/llm/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  openrouter_provider.py
syncflow/settings/: __init__.py  base.py  dev.py  prod.py
syncflow/templates/: base.html
tests/llm/: test_pricing_and_models.py  test_providers.py
(+2 files in other folders)
